<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_checksalary"
        android:icon="@drawable/salary_icon"
        android:title="@string/checksalary" />
    <item
        android:id="@+id/nav_checkemployee"
        android:icon="@drawable/person_icon"
        android:title="@string/checkemployee" />
    <item
        android:id="@+id/nav_viewimage"
        android:icon="@drawable/image_icon"
        android:title="@string/viewimage" />
    <item
        android:id="@+id/nav_changepassword"
        android:icon="@drawable/password_icon"
        android:title="@string/changepassword" />

</menu>
