<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundw"
    tools:context=".CheckSalary">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/empid_salary"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/EmpId"

        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/rupeesperday"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:labelFor="@string/perdayRupees"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/perdayRupees"

        app:layout_constraintTop_toBottomOf="@id/empid_salary" />

    <TextView
        android:id="@+id/fromdate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fromdate"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/rupeesperday" />

    <Button
        android:id="@+id/fromDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:text="@string/FromDateSelect"
        app:layout_constraintBaseline_toBaselineOf="@id/fromdate"
        app:layout_constraintBottom_toBottomOf="@id/fromdate"
        app:layout_constraintLeft_toRightOf="@id/fromdate"
        app:layout_constraintTop_toBottomOf="@id/rupeesperday" />

    <TextView
        android:id="@+id/todate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fromdate"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fromdate" />

    <Button
        android:id="@+id/toDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:text="@string/FromDateSelect"
        app:layout_constraintBaseline_toBaselineOf="@id/todate"
        app:layout_constraintBottom_toBottomOf="@id/todate"
        app:layout_constraintLeft_toRightOf="@id/todate"
        app:layout_constraintTop_toBottomOf="@id/todate" />

    <Button
        android:id="@+id/searchSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todate" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:minHeight="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchSalary">

        <TextView
            android:id="@+id/daysLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/days"
            app:layout_constraintHorizontal_bias=".3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/daysValue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/days"
            app:layout_constraintLeft_toRightOf="@id/daysLabel"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/empIdLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/EmpId"
            app:layout_constraintHorizontal_bias=".3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daysLabel" />

        <TextView
            android:id="@+id/empIdValue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/EmpId"
            app:layout_constraintLeft_toRightOf="@id/daysLabel"
            app:layout_constraintTop_toBottomOf="@id/daysValue"

            />

        <TextView
            android:id="@+id/salaryLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/salary"
            app:layout_constraintHorizontal_bias=".3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empIdLabel" />

        <TextView
            android:id="@+id/salaryValue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/salary"
            app:layout_constraintLeft_toRightOf="@id/salaryLabel"
            app:layout_constraintTop_toBottomOf="@id/empIdValue"

            />

        <Button
            android:id="@+id/clearSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/clear"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salaryLabel" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>

</ScrollView>