<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/websitebackground"
    tools:context="com.example.krishnapratap.automatepayroll.LoginPage">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"


        android:theme="@style/AppTheme"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/nav_bar" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <ImageView
        android:id="@+id/uImageView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="95dp"

        app:layout_constraintBottom_toTopOf="@+id/longitude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tUsername"

        />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/longitude"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uImageView" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="Value"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/uImageView" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/latitude"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/latitude"
        app:layout_constraintEnd_toStartOf="@+id/longitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:layout_marginEnd="14dp"

        android:text="Value"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/longitude" />


</android.support.constraint.ConstraintLayout>
